A few form formatting changes and fixed issue where inputs would not function on Safari. #172

--- a/TabRepository/wwwroot/css/site.css
+++ b/TabRepository/wwwroot/css/site.css
@@ -6,6 +6,14 @@
     user-select: none;
 }
 
+input, input:before, input:after {
+    -webkit-user-select: initial;
+    -khtml-user-select: initial;
+    -moz-user-select: initial;
+    -ms-user-select: initial;
+    user-select: initial;
+}
+
 html {
     height: 100%;
     background-color: black;
